--- a/jadavpurunimun/package.json
+++ b/jadavpurunimun/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
@@ -17,7 +19,9 @@
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
