--- a/jadavpurunimun/package.json
+++ b/jadavpurunimun/package.json
@@ -10,18 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
     "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.4",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-parallax": "^3.5.1",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
